se comienza el rediseño del blog, se listo las etiquetas y los post

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -4,7 +4,9 @@
   "exportConfig": true,
   "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "html"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -23,20 +25,31 @@
       "imports": [
         "sass/variables.scss",
         "sass/grid.scss",
-        "sass/general.scss",
         "sass/mixins.scss",
+        "sass/general.scss",
         "sass/header.scss",
         "sass/nav.scss",
-        "sass/social.scss",
         "sass/body.scss",
-        "sass/article.scss",
         "sass/aside.scss",
-        "sass/footer.scss"
+        "sass/footer.scss",
+        "sass/social.scss",
+        "sass/article.scss"
+      ]
+    },
+    {
+      "path": "pug/index.pug",
+      "imports": [
+        "css/estilos.css",
+        "pug/head.pug",
+        "pug/header.pug",
+        "pug/body.pug",
+        "pug/aside.pug",
+        "pug/footer.pug"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
